--- a/style.css
+++ b/style.css
@@ -8,3 +8,13 @@
     display: flex;
     flex-wrap: wrap;
 }
+
+#clear, #rainbow {
+    background-color: rgb(46, 46, 151);
+    color: white;
+    width: 200px;
+    height: 50px;
+    cursor: pointer;
+    margin: 50px;
+    font-size: 15px;
+}
